added yaml openapi for handling put request for mealplant time
