# controller/meal_plan_time/meal_plan_time.js
@@ -58,24 +58,24 @@ exports.updateMealplanTime = async (req, res) => {
   // eslint-disable-next-line camelcase
   const { mealPlanName, mealplantime_ID } = req.body;
   // eslint-disable-next-line camelcase
-  let id = mealplantime_ID;
+  let id = req.params.id;
 
   // Check if the meal plan already exists
-  // const checkIfMealplanExistsSql = 'SELECT * FROM mealplantime WHERE meal_plan_name = ?';
-  // const existingMealplan = await indexQuery.checkIfRecordExists(checkIfMealplanExistsSql, [mealPlanName]);
+  const checkIfMealplanExistsSql = 'SELECT * FROM mealplantime WHERE meal_plan_name = ?';
+  const existingMealplan = await indexQuery.checkIfRecordExists(checkIfMealplanExistsSql, [mealPlanName]);
 
-  // if (existingMealplan.length !== 0) {
-  //   return res.status(400).json({ message: 'Meal plan with the same name already exists' });
-  // }
-
-  const updateMealplanSql = 'UPDATE mealplantime SET meal_plan_name = ? WHERE  mealplantime_ID = ?';
-
-  try {
-    await indexQuery.updateRecord(updateMealplanSql, [mealPlanName, id]);
-    res.json({ message: 'meal plan updated successfully' });
-  } catch (error) {
-    res.status(500).json({ message: error.message });
+  if (existingMealplan.length !== 0) {
+    throw new conflictError('Meal plan time with the same name already exists');
+    return res.status(400).json({ message: 'Meal plan with the same name already exists' });
   }
+
+  const updateMealplanSql = 'UPDATE mealplantime SET meal_plan_name = ? WHERE  idmealPlanWeek = ?';
+
+ 
+    await indexQuery.updateRecord(updateMealplanSql, [mealPlanName, id]);
+    res.status(StatusCodes.OK).send(getSuccessMessage(200,[], 'succesfully updated' ));
+    //res.json({ message: 'meal plan updated successfully' });
+ 
 };
 
 exports.deleteMealplanTime = async (req, res) => {
